[gd_scene load_steps=3 format=3 uid="uid://bjrb8oltbtk5n"]

[ext_resource type="PackedScene" uid="uid://drqylikrejhxd" path="res://Game/Scenes/Player/Santa.tscn" id="1_8xcn2"]
[ext_resource type="Script" path="res://Game/Scripts/Main/Main.gd" id="1_oy53q"]

[node name="Main" type="Node2D"]
script = ExtResource("1_oy53q")

[node name="Santa" parent="." instance=ExtResource("1_8xcn2")]
position = Vector2(1024, 704)

[node name="Health" type="ProgressBar" parent="."]
offset_right = 640.0
offset_bottom = 64.0
show_percentage = false

[node name="Kills" type="Label" parent="."]
offset_left = 832.0
offset_right = 1152.0
offset_bottom = 64.0

[node name="Flee" type="Button" parent="."]
offset_left = 1600.0
offset_right = 1920.0
offset_bottom = 64.0
text = "Flee to main menu"

[node name="Candy" type="Timer" parent="."]

[node name="Snowball" type="Timer" parent="."]

[node name="Presents" type="Timer" parent="."]

[node name="Star" type="Timer" parent="."]
wait_time = 10.0

[node name="Shield" type="Timer" parent="."]

[node name="Tree" type="Timer" parent="."]

[node name="Regen" type="Timer" parent="."]

[node name="Enemy" type="Timer" parent="."]

[node name="Boss" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="notify-send" type="Label" parent="."]
offset_top = 704.0
offset_right = 1920.0
offset_bottom = 1088.0
theme_override_font_sizes/font_size = 46
text = "This is a notification"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="Flee" to="." method="_on_flee_pressed"]
[connection signal="timeout" from="Candy" to="." method="_on_candy_timeout"]
[connection signal="timeout" from="Snowball" to="." method="_on_snowball_timeout"]
[connection signal="timeout" from="Star" to="." method="_on_star_timeout"]
[connection signal="timeout" from="Shield" to="." method="_on_shield_timeout"]
[connection signal="timeout" from="Tree" to="." method="_on_tree_timeout"]
[connection signal="timeout" from="Regen" to="." method="_on_regen_timeout"]
[connection signal="timeout" from="Enemy" to="." method="_on_enemy_timeout"]
[connection signal="timeout" from="Boss" to="." method="_on_boss_timeout"]
